--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,10 +6,20 @@ variables:
   dotnetSdkVersion: '5.x'
 
 steps:
+- checkout: self
+  persistCredentials: true
+
+steps:
+- checkout: self
+  clean: true
+
+steps:
 - task: UseDotNet@2
   displayName: 'Use .NET SDK $(dotnetSdkVersion)'
   inputs:
     version: '$(dotnetSdkVersion)'
+
+
 
 - task: DotNetCoreCLI@2
   displayName: 'Restore project dependencies'
